# chuck-coin

./: .gitignore  Cargo.toml  README.md  asciiart.txt  license.md  networking_reference.rs
src/: block.rs  frametype.rs  ledger.rs  lib.rs  main.rs  serde_impl.rs  tx.rs  user.rs
tests/: test.rs
