[package]
name = "coin"
version = "0.1.1"
edition = "2021"
license-file = "license.md"
description = "Simple Chuck E Cheese themed crypto currency"

[dependencies]
base64 = "0.22.1"
bitvec = "1.0.1"
ethnum = "1.5.0"
hex = "0.4.3"
hex-literal = "0.4.1"
k256 = "0.13.4"
rand = "0.8.5"
rand_core = "0.6.4"
random = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"
