[package]
name = "coin"
version = "0.3.0"
edition = "2021"
license-file = "license.md"
description = "Simple Chuck E Cheese themed crypto currency"

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
bytes = "1.9.0"
ethnum = "1.5.0"
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "0.4.1"
# indexmap = "2.7.0"
k256 = { version = "0.13.4", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
